update some codes in frontend and backend,create GlobalExceptionHandler class.